--- a/custom_components/circadian_lighting/manifest.json
+++ b/custom_components/circadian_lighting/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "circadian_lighting",
   "name": "Circadian Lighting",
-  "codeowners": ["@claytonjn"],
-  "dependencies": ["sensor","switch"],
-  "documentation": "https://github.com/claytonjn/hass-circadian_lighting",
+  "codeowners": ["@nielsrowinbik"],
+  "dependencies": ["sensor", "switch"],
+  "documentation": "https://github.com/nielsrowinbik/hass-circadian_lighting",
   "iot_class": "calculated",
-  "issue_tracker": "https://github.com/claytonjn/hass-circadian_lighting/issues",
+  "issue_tracker": "https://github.com/nielsrowinbik/hass-circadian_lighting/issues",
   "requirements": [],
   "version": "2.1.4"
 }
